# neural-network-app

./: .gitignore  CMakeLists.txt  README.md  conf_file
html/: _formulas.tex  annotated.html  classMain__Window-members.html  classMain__Window.html  classMain__Window__coll__graph.dot  classMain__Window__coll__graph.md5  classMain__Window__inherit__graph.dot  classMain__Window__inherit__graph.md5  classNeuralNetImpl-members.html  classNeuralNetImpl.html  classNeuralNetImpl__coll__graph.dot  classNeuralNetImpl__coll__graph.md5  classNeuralNetImpl__inherit__graph.dot  classPredict__Window-members.html  classPredict__Window.html  classPredict__Window__coll__graph.dot  classPredict__Window__coll__graph.md5  classPredict__Window__inherit__graph.md5  classStats__Window-members.html  classStats__Window.html  classStats__Window__coll__graph.dot  classStats__Window__coll__graph.md5  classStats__Window__inherit__graph.dot  classStats__Window__inherit__graph.md5  classTest-members.html  classTest.html  classTestBase-members.html  classTestBase.html  classTestBase__inherit__graph.dot  classTestBase__inherit__graph.md5  classTest__coll__graph.dot  classTest__coll__graph.md5  classTest__inherit__graph.dot  classTest__inherit__graph.md5  classTrain-members.html  classTrain.html  classTrainBase-members.html  classTrainBase.html  classTrainBase__inherit__graph.dot  classTrainBase__inherit__graph.md5  (+186 more)
include/: dataset.h  dataset_window.h  main_window.h  neural_net.h  predict.h  predict_window.h  stats_window.h  test.h  train.h  train_params.h  train_window.h  ui_dataset_window.h  ui_main_window.h  ui_predict_window.h  ui_stats_window.h  ui_train_window.h
latex/: annotated.tex  classMain__Window.tex  classMain__Window__coll__graph.dot  classMain__Window__coll__graph.md5  classMain__Window__inherit__graph.dot  classNeuralNetImpl.tex  classNeuralNetImpl__coll__graph.dot  classNeuralNetImpl__coll__graph.md5  classNeuralNetImpl__inherit__graph.md5  classTest.tex  (+138 more)
(+38 files in other folders)
